[package]
name = "tor-ffi"
authors = ["Nitesh Balusu <niteshbalusu@icloud.com>"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
tor = { path = "../tor" }
serde = { version="1.0.217", features = ["derive"], default-features = false }
serde_json = "1.0.138"
once_cell = "1.20.3"
logger = { path = "../logger" }

[build-dependencies]
cbindgen = "0.28.0"

[lib]
crate-type = ["staticlib"]

# Add this section to ensure proper linking on Android
[target.'cfg(target_os = "android")'.rustflags]
"-C" = "link-arg=-Wl,--export-dynamic"

# Add these profile configurations
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units
panic = 'abort'     # Remove panic unwinding code
strip = true        # Strip symbols from binary
