[package]
name = "tor"
version = "0.1.0"
authors = ["Nitesh Balusu <niteshbalusu@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.4", features = ["net", "rt-multi-thread", "time"] }
logger = { path = "../logger" }
libtor = { git = "https://github.com/niteshbalusu11/libtor", branch = "master", features=["vendored-openssl"] }
torut = { version = "0.1.9", features=["control","v3","vendored_openssl"] }
anyhow = "1.0.95"
serde = { version="1.0.217", features = ["derive"], default-features = false }
serde_json = "1.0.138"
futures = { version="0.3.31", default-features = false }
socks = { version = "0.3.4"}
base64 = "0.22.1"
thiserror = "1.0.24"
num_cpus = "1.0"
tokio-compat-02 = "0.2"
httparse = "1.10.0"
android_logger = "0.13"
log = "0.4"
once_cell = "1.20.3"
url = "2.5.4"

[dev-dependencies]
serial_test = "*"
utils = { path = "../utils" }

[build-dependencies]
cbindgen = "0.24.0"

[lib]
crate-type = ["staticlib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"  # Only if you need JNI functionality

# Add this section to ensure proper linking on Android
[target.'cfg(target_os = "android")'.rustflags]
"-C" = "link-arg=-Wl,--export-dynamic"


# Add these profile configurations
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units
panic = 'abort'     # Remove panic unwinding code
strip = true        # Strip symbols from binary
